[gd_scene load_steps=13 format=2]

[ext_resource path="res://PlayerController/PlayerInventory/PlayerInventory.gd" type="Script" id=1]
[ext_resource path="res://Plants/cablit.tres" type="Resource" id=2]
[ext_resource path="res://PlayerController/PlayerInventory/Backpack.gd" type="Script" id=3]
[ext_resource path="res://PlayerController/PlayerInventory/backpack_closed.png" type="Texture" id=4]
[ext_resource path="res://PlayerController/PlayerInventory/backpack_open.png" type="Texture" id=5]
[ext_resource path="res://PlayerController/PlayerInventory/backpack_hovered.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.309804, 0.168627, 0.0588235, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=5]
resource_name = "Close"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Backpack:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 304, 528 ), Vector2( 480, 528 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerInventory:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 368, 528 ), Vector2( 368, 608 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Backpack:icon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Backpack:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 528 ), Vector2( 304, 528 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerInventory:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 368, 608 ), Vector2( 368, 528 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Backpack:icon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ]
}

[node name="PlayerInventoryOverlay" type="CanvasLayer"]
layer = 8

[node name="PlayerInventory" type="Control" parent="." groups=[
"player_inventory",
]]
margin_left = 368.0
margin_top = 528.0
margin_right = 408.0
margin_bottom = 568.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
seeds = [ ExtResource( 2 ), ExtResource( 2 ) ]

[node name="ScrollContainer" type="ScrollContainer" parent="PlayerInventory"]
margin_right = 295.0
margin_bottom = 64.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryList" type="ItemList" parent="PlayerInventory/ScrollContainer"]
margin_right = 295.0
margin_bottom = 64.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
allow_reselect = true
max_columns = 0
same_column_width = true
fixed_column_width = 32
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backpack" type="Button" parent="." groups=[
"backpack",
]]
margin_left = 304.0
margin_top = 528.0
margin_right = 368.0
margin_bottom = 592.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
icon = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackpackAnimator" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 5 )
anims/Open = SubResource( 6 )
[connection signal="item_selected" from="PlayerInventory/ScrollContainer/InventoryList" to="PlayerInventory" method="_on_InventoryList_item_selected"]
[connection signal="pressed" from="Backpack" to="Backpack" method="_on_Backpack_pressed"]
